<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="hello">Hello World, Main!</string>
	<string name="app_name">Time Stripes Beta</string>
	<string name="app_vers">3.2</string>
	<string name="app_desc_long_1">&quot;Time Stripes&quot; is an app by that you can see how much is the time gap of between multiple timezones.\n\nPrograms, graphics and UI design:\n  openeddistagon@gmail.com</string>
	<string name="app_desc_long_font">The font shown in the app is &lt;Neuropol&gt; from Larabie fonts, all rights reserved.</string>
	<string name="app_desc_long_src">You can get all source files public on https://github.com/odistagon/TimeStripes, under the licence of:</string>
	<string name="app_desc_long_note">Note you CANNOT make and distribute any derivatives. Tap the above icon for license description.</string>
	<string name="dlg_seltz_title">Pick a timezone</string>
	<string name="dlg_seltz_desc">You can use filter by putting in a part of the name (3 &lt; chars) into the box below and press the button.</string>
	<string name="rs_seltzdlg_filt">Filter</string>
	<string name="rs_dlg_pos">OK</string>
	<string name="rs_dlg_neg">No</string>
	<string name="dlgbtn_copycb">Copy to clipboard</string>
	<string name="dlgbtn_close_">Close</string>
	<string name="dlg_tzset_desc">Configure a set of timezones. You can add, alter and remove each item as you like.</string>
	<string name="dlg_datpic_t">Pick a goal date</string>
	<string name="dlg_shwtxt_t">Date times</string>
	<string name="dlg_discla_t">Disclaimer</string>
	<string name="dlg_discla_m">This software is provided on an &quot;AS IS&quot; basis without warranty of any kind. This software is intended to be accurate but may include errors. Please refer to other sources as well for important appointments.</string>
	<string name="dlg_discla_agre">Agree</string>
	<string name="icdesc_font_neuropol">Neuropol font by Larabie fonts</string>
	<string name="icdesc_cc">Creative Commons Attribution-NoDerivs</string>
	<string name="icdesc_cc_url">http://creativecommons.org/licenses/by-nd/3.0/deed</string>

	<string name="prefcat_disp">Display settings</string>
	<string name="pref_cloktz_t">Clock timezone</string>
	<string name="pref_cloktz_dlgt">Pick a clock timezone</string>
	<string name="pref_cloktz_s">You can select which TZ do you like in the main clock on the center of the screen.</string>
	<string name="pref_cloktz_opt1">None</string>
	<string name="pref_cloktz_opt2">Right-most TZ</string>
	<string name="pref_cloktz_opt3">System TZ</string>
	<string name="pref_wallpa_t">Wall paper</string>
	<string name="pref_wallpa_s">Select wall paper image. To show as background, select &quot;Wallpaper&quot; on &quot;Background&quot;.</string>
	<string name="pref_bg_sel_t">Background</string>
	<string name="pref_bg_sel_dlgt">Select background</string>
	<string name="pref_bg_sel_s">Change selection here to enable wallpaper.</string>
	<string name="pref_bg_sel_opt1">Flat</string>
	<string name="pref_bg_sel_opt2">Wallpaper</string>
	<string name="pref_fgtrns_t">Stripes transparency</string>
	<string name="pref_fgtrns_s">0 - transparent, 100 - opaque</string>
	<string name="pref_vwslnt_t">View angle</string>
	<string name="pref_vwslnt_s">Changes view point from left to right by degree. 0 is center.</string>
	<string name="pref_cfgbtn_t">Config Buttons</string>
	<string name="pref_cfgbtn_s">Select which buttons are in screen right.</string>
	<string name="pref_usehdr_t">Show app header</string>
	<string name="pref_usehdr_s">Use app header or Action Bar (Android 3.0 or lator), requires app restart.</string>
	<string name="pref_usampm_t">Use am. pm.</string>
	<string name="pref_usampm_s">Use am. pm. instead of 24hr format, requires app restart.</string>
	<string name="prefcat_tzns">Timezone Settings</string>
	<string name="pref_edittz_t">Edit timezone</string>
	<string name="pref_edittz_s">Edit current combination of timezones</string>
	<string name="prefcat_oths">Others</string>
	<string name="pref_debug__t">Debug</string>
	<string name="pref_debug__s">Enable debug output</string>
	<string name="pref_lauabt_t">About</string>
	<string name="pref_lauabt_s">Descriptions about this app</string>
	<string name="prefcat_btns">Buttons</string>
	<string name="pref_btns_ffwd_t">Go forward</string>
	<string name="pref_btns_ffwd_s">Tap to go to next day</string>
	<string name="pref_btns_stwm_t">Stop</string>
	<string name="pref_btns_stwm_s">Tap to stop time advance, long tap to go back to real current time</string>
	<string name="pref_btns_rewd_t">Go backward</string>
	<string name="pref_btns_rewd_s">Tap to go to previous day</string>
	<string name="pref_btns_sett_t">Preference</string>
	<string name="pref_btns_sett_s">Tap to open preferences screen</string>
	<string name="pref_btns_zoin_t">Zoom in</string>
	<string name="pref_btns_zoin_s">Tap to zoom in</string>
	<string name="pref_btns_zout_t">Zoom out</string>
	<string name="pref_btns_zout_s">Tap to zoom out</string>

	<string name="mi_shwtxt">Show as text</string>
	<string name="mi_prefes">Preferences</string>
	<string name="mi_jmpabs">Jump absolute</string>
	<string name="mi_zoomin">Zoom in</string>
	<string name="mi_zoomou">Zoom out</string>
	<string name="mi_fdstne">Find next DST change</string>
	<string name="mi_fdstpr">Find prev DST change</string>
	<string name="mi_about_">About this app</string>
	<string name="mt_editz_">Edit a timezone</string>
	<string name="mi_pictz_">Pick a timezone</string>
	<string name="mi_addetz">Add system timezone</string>
	<string name="mi_remtz_">Remove</string>
	<string name="mi_muptz_">Move up</string>
	<string name="mi_mdntz_">Move down</string>

	<string name="toas_nodst_">No DST change for the timezone. Change right-most (re-order) and try again.</string>
	<string name="toas_savcri">Failed to save cropped image&#8230;</string>
	<string name="toas_nofcra">No image crop app found.</string>
		
	<string name="li_addnew">+ Add new</string>

	<!-- pref keys, no need to localize -->
	<string name="prefkey_usehdr">PK_USEHDR</string>
	<string name="prefkey_usampm">PK_USAMPM</string>
	<string name="prefkey_dscllv">PK_DSCLLV</string>
	<string name="prefkey_clcktz">PK_CLCKTZ</string>
	<string name="prefkey_wallpa">PK_WALLPA</string>
	<string name="prefkey_bg_sel">PK_BG_SEL</string>
	<string name="prefkey_fgtrns">PK_FGTRNS</string>
	<string name="prefkey_vwslnt">PK_VWSLNT</string>
	<string name="prefkey_edittz">PK_EDITTZ</string>
	<string name="prefkey_debug_">PK_DEBUG_</string>
	<string name="prefkey_lauabt">PK_LAUABT</string>
	<string name="prefkey_cfgbtn">PK_CFGBTN</string>
	<string name="prefkey_btns_ffwd">PK_BTNS_FFWD</string>
	<string name="prefkey_btns_stwm">PK_BTNS_STWM</string>
	<string name="prefkey_btns_rewd">PK_BTNS_REQD</string>
	<string name="prefkey_btns_sett">PK_BTNS_SETT</string>
	<string name="prefkey_btns_zoin">PK_BTNS_ZOIN</string>
	<string name="prefkey_btns_zout">PK_BTNS_ZOUT</string>

	<string name="pfval_bg_sel_1">1</string>
	<string name="pfval_bg_sel_2">2</string>

</resources>
