<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/opme_aytop_jmpabs" android:title="@string/mi_jmpabs"
		android:icon="@android:drawable/ic_menu_compass" />
	<item android:id="@+id/opme_aytop_shwtxt" android:title="@string/mi_shwtxt"
		android:icon="@android:drawable/ic_menu_edit" />

	<!-- 
	<item android:id="@+id/opme_aytop_zoomin" android:title="@string/mi_zoomin"
		android:icon="@drawable/ic_menu_zoin" />
	<item android:id="@+id/opme_aytop_zoomou" android:title="@string/mi_zoomou"
		android:icon="@drawable/ic_menu_zout" />
	 -->

	<item android:id="@+id/opme_aytop_fdstne" android:title="@string/mi_fdstne"
		android:icon="@drawable/ic_menu_ffwd" />
	<item android:id="@+id/opme_aytop_fdstpr" android:title="@string/mi_fdstpr"
		android:icon="@drawable/ic_menu_rewd" />

	<item android:id="@+id/opme_aytop_prefes" android:title="@string/mi_prefes"
		android:icon="@android:drawable/ic_menu_manage" />
	<item android:id="@+id/opme_aytop_about_" android:title="@string/mi_about_"
		android:icon="@android:drawable/ic_menu_info_details" />
	<!-- 
		android:showAsAction="ifRoom|withText" />
	 -->
</menu>