<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/lo_about_main"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#AA66AACC" 
	>

	<LinearLayout
		android:id="@+id/lo_about_p1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="#AA0000FF" android:layout_margin="10dip"
		android:orientation="horizontal"
		>

	<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/iv_tb_icon" android:contentDescription="@string/hello"
		android:layout_margin="30dp" 
		android:background="#AA6666CC"
		android:src="@drawable/ic_launcher_timestr" />

	<LinearLayout
		android:id="@+id/lo_about_p1r"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="#AA3333FF" android:layout_gravity="center_vertical"
		android:layout_margin="10dip"
		android:orientation="vertical"
		>
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:background="#66AA66CC" android:textSize="14dip"
			android:layout_marginBottom="5dip" android:gravity="center|center_vertical"
			android:text="@string/app_name" />
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:background="#66AA66CC" android:textSize="10dip"
			android:gravity="center|center_vertical"
			android:text="@string/app_vers" />
	</LinearLayout>

	</LinearLayout>

	<TextView android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:background="#66AA66CC" android:layout_margin="10dip"
		android:gravity="top|center_vertical"
		android:text="@string/hello" />

	<LinearLayout
		android:id="@+id/lo_about_p2"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="horizontal"
		>
	</LinearLayout>

</LinearLayout>
